# fastapi-template

./: .env.example  README.md  pyproject.toml
alembic/: env.py
app/: config.py
app/schemas/: user.py
